fix verify email layout on mobile

--- a/shared/resources/styles/components/notifications-bar.scss
+++ b/shared/resources/styles/components/notifications-bar.scss
@@ -28,8 +28,14 @@
         text-align: right;
       }
     }
-    .body {
+    .body, .content {
       flex: 1;
+    }
+
+    .content {
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
 
     .mobile-text {
