--- a/tutor/resources/styles/global/notifications-bar.scss
+++ b/tutor/resources/styles/global/notifications-bar.scss
@@ -19,6 +19,11 @@
       font-weight: 500;
       min-height: 40px;
       height: auto;
+      justify-content: space-between;
+
+      .content {
+        flex-direction: column;
+      }
 
       .ox-icon {
         height: 2rem;
@@ -42,27 +47,46 @@
       .mobile-text {
         display: inline;
       }
+      .error {
+        margin: 8px 0;
+        flex: 1;
+        .body {
+          flex: initial;
+        }
+      }
     }
 
     @media (max-width: $tablet-collapse-breakpoint) {
-      padding: 0 24px;
+      padding: 8px 24px;
+
     }
 
     @media (max-width: $mobile-collapse-breakpoint) {
-      padding: 0 16px;
+      padding: 8px 16px;
       .dismiss {
         margin-right: -1px;
       }
+      .error {
+        .body {
+          justify-content: flex-start;
+          margin-left: 0.75rem;
+        }
+      }
+
+      .content {
+        justify-content: center;
+      }
+
       .body {
         &.verify {
-          margin: 5px 0;
+          margin: 5px 10px 5px 0;
         }
         .message {
           text-align: left;
           margin-left: 0.75rem;
         }
       }
-      &.email input[type="text"] {
+      &.email input {
         width: 7rem;
         padding-left: 0.45rem;
       }
